Add support of hadoop-aws s3a SimpleAWSCredentialsProvider to S3DynamoDBLogStore.